# articulate

./: .env.example  .gitignore  LICENSE  README.md  demo_usage.py  interactive.py  main.py  pyproject.toml  requirements.txt  test_interactive.py  visitor.py  workflow.py
src/: config.py  visitor_agent.py
src/agents/: planning_agent.py  research_agent.py  verification_agent.py  writing_agent.py
src/tasks/: __init__.py  article_tasks.py  remarks_template.py
